Fix avatar filename case

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       </div>
 
       <div class="hero-right">
-        <img class="avatar" src="assets/me.JPG" alt="Nikhila Chitta" />
+        <img class="avatar" src="assets/me.jpg" alt="Nikhila Chitta" />
+
       </div>
     </header>
 
