Cache-bust resume PDF

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <p class="headline">Software Engineer , AI/ML </p>
 
         <div class="hero-actions">
-          <a class="btn" href="assets/Nikhila_CV.pdf" target="_blank" rel="noopener">Download Resume</a>
+          <a class="btn" href="assets/Nikhila_CV.pdf?v=2" target="_blank" rel="noopener">
+  Download Resume
+</a>
+
           <a class="btn btn-ghost" href="#projects">View Projects</a>
         </div>
 
